infra/fetch_tweets_atlas/fetch-tweets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fetch-tweets
spec:
  type: LoadBalancer
  selector:
    app: fetch-tweets
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
