infra/fetch_tweets_atlas/fetch-tweets-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fetch-tweets
  annotations:
    haproxy.router.openshift.io/timeout: 600s
spec:
  to:
    kind: Service
    name: fetch-tweets
  port:
    targetPort: 8000
  tls:
    termination: edge
